003-YFinance-Cache implemented
